syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "common/source.proto";
import "common/external_system.proto";
import "common/common.proto";
import "social.proto";
import "location.proto";

option go_package = "api/grpc/v1/organization;organization_grpc_service";

enum OrganizationMaskField {
  ORGANIZATION_PROPERTY_NONE = 0; // No property, ignored by the server
  ORGANIZATION_PROPERTY_ALL = 1; // All properties, if present in the list all other properties are ignored
  ORGANIZATION_PROPERTY_NAME = 2;
  ORGANIZATION_PROPERTY_VALUE_PROPOSITION = 3;
  ORGANIZATION_PROPERTY_TARGET_AUDIENCE = 4;
  ORGANIZATION_PROPERTY_REFERENCE_ID = 5;
  ORGANIZATION_PROPERTY_IS_PUBLIC = 7;
  ORGANIZATION_PROPERTY_HIDE = 8;
  ORGANIZATION_PROPERTY_DESCRIPTION = 9;
  ORGANIZATION_PROPERTY_WEBSITE = 10;
  ORGANIZATION_PROPERTY_INDUSTRY = 11;
  ORGANIZATION_PROPERTY_SUB_INDUSTRY = 12;
  ORGANIZATION_PROPERTY_INDUSTRY_GROUP = 13;
  ORGANIZATION_PROPERTY_MARKET = 14;
  ORGANIZATION_PROPERTY_EMPLOYEES = 15;
  ORGANIZATION_PROPERTY_LAST_FUNDING_ROUND = 16;
  ORGANIZATION_PROPERTY_LAST_FUNDING_AMOUNT = 17;
  ORGANIZATION_PROPERTY_NOTE = 18;
  ORGANIZATION_PROPERTY_YEAR_FOUNDED = 19;
  ORGANIZATION_PROPERTY_LOGO_URL = 20;
  ORGANIZATION_PROPERTY_HEADQUARTERS = 21;
  ORGANIZATION_PROPERTY_EMPLOYEE_GROWTH_RATE = 22;
  ORGANIZATION_PROPERTY_SLACK_CHANNEL_ID = 23;
  ORGANIZATION_PROPERTY_RELATIONSHIP = 24;
  ORGANIZATION_PROPERTY_STAGE = 25;
  ORGANIZATION_PROPERTY_ICON_URL = 26;
  ORGANIZATION_PROPERTY_ICP_FIT = 27;
}

enum BillingProfileFieldMask {
  BILLING_PROFILE_PROPERTY_NONE = 0; // No property, ignored by the server
  BILLING_PROFILE_PROPERTY_LEGAL_NAME = 2;
  BILLING_PROFILE_PROPERTY_TAX_ID = 3;
}

message UpsertOrganizationGrpcRequest {
  string id = 1;
  string tenant = 2;
  string name = 3;
  string description = 4;
  string website = 5;
  string industry = 6;
  bool isPublic = 7;
  int64 employees = 8;
  string market = 9;
  google.protobuf.Timestamp  createdAt = 13;
  google.protobuf.Timestamp  updatedAt = 14;
  string subIndustry = 15;
  string industryGroup = 16;
  string targetAudience = 17;
  string valueProposition = 18;
  string lastFundingRound = 19;
  string lastFundingAmount = 20;
  bool hide = 22;
  string note = 23;
  SourceFields sourceFields = 25;
  ExternalSystemFields externalSystemFields = 26;
  string loggedInUserId = 27;
  string referenceId = 28;
  bool webScrapeMetadata = 30 [deprecated = true];
  repeated OrganizationMaskField fieldsMask = 31;
  string logoUrl = 32;
  string headquarters = 33;
  string employeeGrowthRate = 34;
  optional int64 yearFounded = 35;
  string slackChannelId = 36;
  string relationship = 37;
  string stage = 38;
  string leadSource = 39;
  string iconUrl = 40;
  bool icpFit = 41;
}

message UpdateOrganizationGrpcRequest {
  string organizationId = 1;
  string tenant = 2;
  string loggedInUserId = 3;
  google.protobuf.Timestamp  updatedAt = 4;
  repeated OrganizationMaskField fieldsMask = 5;
  SourceFields sourceFields = 6;
  string webScrapedUrl = 7 [deprecated = true];
  string market = 8;
  string industry = 9;
  string subIndustry = 10;
  string industryGroup = 11;
  string targetAudience = 12;
  string valueProposition = 13;
  string logoUrl = 14;
  string headquarters = 15;
  string employeeGrowthRate = 16;
  optional int64 yearFounded = 17;
  string name = 18;
  string description = 19;
  string website = 20;
  int64 employees = 21;
  string slackChannelId = 36;
  string relationship = 37;
  string stage = 38;
  string enrichSource = 39;
  string enrichDomain = 40;
  bool isPublic = 41;
  string iconUrl = 42;
}

message OrganizationIdGrpcRequest {
  string tenant = 1;
  string organizationId = 2;
  string loggedInUserId = 3;
  string appSource = 4;
}

message RefreshRenewalSummaryGrpcRequest {
  string tenant = 1;
  string organizationId = 2;
  string loggedInUserId = 3;
  string appSource = 4;
}

message RefreshDerivedDataGrpcRequest {
  string tenant = 1;
  string organizationId = 2;
  string loggedInUserId = 3;
  string appSource = 4;
}

message LinkPhoneNumberToOrganizationGrpcRequest {
  string tenant = 1;
  string organizationId = 2;
  string phoneNumberId = 3;
  bool primary = 4;
  string label = 5;
  string loggedInUserId = 6;
  string appSource = 7;
}

message LinkEmailToBillingProfileGrpcRequest {
  string tenant = 1;
  string organizationId = 2;
  string billingProfileId = 3;
  string emailId = 4;
  string loggedInUserId = 5;
  string appSource = 6;
  bool primary = 7;
}

message UnlinkEmailFromBillingProfileGrpcRequest {
  string tenant = 1;
  string organizationId = 2;
  string billingProfileId = 3;
  string emailId = 4;
  string loggedInUserId = 5;
  string appSource = 6;
}

message LinkLocationToOrganizationGrpcRequest {
  string tenant = 1;
  string organizationId = 2;
  string locationId = 3;
  string loggedInUserId = 4;
}

message LinkLocationToBillingProfileGrpcRequest {
  string tenant = 1;
  string organizationId = 2;
  string billingProfileId = 3;
  string locationId = 4;
  string loggedInUserId = 5;
  string appSource = 6;
}

message UnlinkLocationFromBillingProfileGrpcRequest {
  string tenant = 1;
  string organizationId = 2;
  string billingProfileId = 3;
  string locationId = 4;
  string loggedInUserId = 5;
  string appSource = 6;
}

message LinkDomainToOrganizationGrpcRequest {
  string tenant = 1;
  string organizationId = 2;
  string domain = 3;
  string userId = 4 [deprecated = true];
  string loggedInUserId = 5;
  string appSource = 6;
}

message UnLinkDomainFromOrganizationGrpcRequest {
  string tenant = 1;
  string organizationId = 2;
  string domain = 3;
  string loggedInUserId = 4;
  string appSource = 5;
}

enum CustomFieldDataType {
  TEXT = 0;
  BOOL = 1;
  DATETIME = 2;
  INTEGER = 3;
  DECIMAL = 4;
}

message CustomFieldValue {
  optional string stringValue = 1;
  optional bool boolValue = 2;
  optional google.protobuf.Timestamp  datetimeValue = 3;
  optional int64 integerValue = 4;
  optional double decimalValue = 5;
}

message CustomFieldForOrganizationGrpcRequest {
  string tenant = 1;
  string organizationId = 2;
  string userId = 3 [deprecated = true];
  string customFieldId = 4;
  string customFieldName = 5;
  CustomFieldValue customFieldValue = 6;
  CustomFieldDataType customFieldDataType = 7;
  optional string customFieldTemplateId = 8;
  SourceFields sourceFields = 9;
  google.protobuf.Timestamp  createdAt = 10;
  google.protobuf.Timestamp  updatedAt = 11;
  string loggedInUserId = 12;
}

message AddParentOrganizationGrpcRequest {
  string tenant = 1;
  string organizationId = 2;
  string parentOrganizationId = 3;
  string loggedInUserId = 4;
  string type = 5;
  string appSource = 6;
}

message RemoveParentOrganizationGrpcRequest {
  string tenant = 1;
  string organizationId = 2;
  string parentOrganizationId = 3;
  string loggedInUserId = 4;
  string appSource = 5;
}

message EnrichOrganizationGrpcRequest {
  string tenant = 1;
  string organizationId = 2;
  string url = 3;
  string appSource = 4;
  string loggedInUserId = 5;
}

message UpdateOnboardingStatusGrpcRequest {
  string tenant = 1;
  string organizationId = 2;
  string loggedInUserId = 3;
  OnboardingStatus onboardingStatus = 4;
  string comments = 5;
  google.protobuf.Timestamp updatedAt = 6;
  string appSource = 7;
  string causedByContractId = 8;
}

enum OnboardingStatus {
  ONBOARDING_STATUS_NOT_APPLICABLE = 0;
  ONBOARDING_STATUS_NOT_STARTED = 1;
  ONBOARDING_STATUS_ON_TRACK = 2;
  ONBOARDING_STATUS_LATE = 3;
  ONBOARDING_STATUS_STUCK = 4;
  ONBOARDING_STATUS_DONE = 5;
  ONBOARDING_STATUS_SUCCESSFUL = 6;
}

message AddSocialGrpcRequest {
  string tenant = 1;
  string organizationId = 2;
  string loggedInUserId = 3;
  SourceFields sourceFields = 4;
  string socialId = 5;
  string url = 6;
  google.protobuf.Timestamp  createdAt = 7;
  string alias = 9;
  int64 followersCount = 10;
  string externalId = 11;
}

message RemoveSocialGrpcRequest {
  string tenant = 1;
  string organizationId = 2;
  string loggedInUserId = 3;
  string appSource = 4;
  string socialId = 5; // The id of the social, used to identify the social
  string url = 6; // The url of the social, used to identify the social if missing socialId
}

message UpdateOrganizationOwnerGrpcRequest {
  string tenant = 1;
  string organizationId = 2;
  string ownerUserId = 3;
  string loggedInUserId = 4; // The user who is performing the action
  string appSource = 5;
}

message CreateBillingProfileGrpcRequest {
  string tenant = 1;
  string organizationId = 2;
  string billingProfileId = 3;
  string loggedInUserId = 4;
  SourceFields sourceFields = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp updatedAt = 7;
  string legalName = 8;
  string taxId = 9;
}

message UpdateBillingProfileGrpcRequest {
  string tenant = 1;
  string organizationId = 2;
  string billingProfileId = 3;
  string loggedInUserId = 4;
  string appSource = 5;
  google.protobuf.Timestamp updatedAt = 6;
  string legalName = 7;
  string taxId = 8;
  repeated BillingProfileFieldMask fieldsMask = 9;
}

message OrganizationAddTagGrpcRequest {
  string organizationId = 1;
  string tenant = 2;
  string loggedInUserId = 3;
  string tagId = 4;
  string appSource = 5;
}

message OrganizationRemoveTagGrpcRequest {
  string organizationId = 1;
  string tenant = 2;
  string loggedInUserId = 3;
  string tagId = 4;
  string appSource = 5;
}

message OrganizationAddLocationGrpcRequest {
  string tenant = 1;
  string organizationId = 2;
  string loggedInUserId = 3;
  SourceFields sourceFields = 4;
  string locationId = 5;
  LocationDetails locationDetails = 6;
  google.protobuf.Timestamp  createdAt = 7;
}

message OrganizationIdGrpcResponse {
  string id = 1;
}

message CustomFieldIdGrpcResponse {
  string id = 1;
}

message BillingProfileIdGrpcResponse {
  string id = 1;
}

service organizationGrpcService {
  rpc UpsertOrganization(UpsertOrganizationGrpcRequest) returns (OrganizationIdGrpcResponse);
  rpc EnrichOrganization(EnrichOrganizationGrpcRequest) returns (OrganizationIdGrpcResponse);
  rpc LinkPhoneNumberToOrganization(LinkPhoneNumberToOrganizationGrpcRequest) returns (OrganizationIdGrpcResponse);
  rpc LinkLocationToOrganization(LinkLocationToOrganizationGrpcRequest) returns (OrganizationIdGrpcResponse);
  rpc LinkDomainToOrganization(LinkDomainToOrganizationGrpcRequest) returns (OrganizationIdGrpcResponse);
  rpc UnlinkDomainFromOrganization(UnLinkDomainFromOrganizationGrpcRequest) returns (OrganizationIdGrpcResponse);
  rpc UpsertCustomFieldToOrganization(CustomFieldForOrganizationGrpcRequest) returns (CustomFieldIdGrpcResponse);
  rpc ShowOrganization(OrganizationIdGrpcRequest) returns (OrganizationIdGrpcResponse);
  rpc RefreshLastTouchpoint(OrganizationIdGrpcRequest) returns (OrganizationIdGrpcResponse);
  rpc RefreshRenewalSummary(RefreshRenewalSummaryGrpcRequest) returns (OrganizationIdGrpcResponse);
  rpc RefreshDerivedData(RefreshDerivedDataGrpcRequest) returns (OrganizationIdGrpcResponse);
  rpc RefreshArr(OrganizationIdGrpcRequest) returns (OrganizationIdGrpcResponse);
  rpc AddParentOrganization(AddParentOrganizationGrpcRequest) returns (OrganizationIdGrpcResponse);
  rpc RemoveParentOrganization(RemoveParentOrganizationGrpcRequest) returns (OrganizationIdGrpcResponse);
  rpc UpdateOnboardingStatus(UpdateOnboardingStatusGrpcRequest) returns (OrganizationIdGrpcResponse);
  rpc UpdateOrganization(UpdateOrganizationGrpcRequest) returns (OrganizationIdGrpcResponse);
  rpc AddSocial(AddSocialGrpcRequest) returns (SocialIdGrpcResponse);
  rpc RemoveSocial(RemoveSocialGrpcRequest) returns (OrganizationIdGrpcResponse);
  rpc UpdateOrganizationOwner(UpdateOrganizationOwnerGrpcRequest) returns (OrganizationIdGrpcResponse);
  rpc CreateBillingProfile(CreateBillingProfileGrpcRequest) returns (BillingProfileIdGrpcResponse);
  rpc UpdateBillingProfile(UpdateBillingProfileGrpcRequest) returns (BillingProfileIdGrpcResponse);
  rpc LinkEmailToBillingProfile(LinkEmailToBillingProfileGrpcRequest) returns (BillingProfileIdGrpcResponse);
  rpc UnlinkEmailFromBillingProfile(UnlinkEmailFromBillingProfileGrpcRequest) returns (BillingProfileIdGrpcResponse);
  rpc LinkLocationToBillingProfile(LinkLocationToBillingProfileGrpcRequest) returns (BillingProfileIdGrpcResponse);
  rpc UnlinkLocationFromBillingProfile(UnlinkLocationFromBillingProfileGrpcRequest) returns (BillingProfileIdGrpcResponse);
  rpc AddLocation(OrganizationAddLocationGrpcRequest) returns (LocationIdGrpcResponse);
  rpc AdjustIndustry(OrganizationIdGrpcRequest) returns (OrganizationIdGrpcResponse);
}
